c4prj2_input/grade.txt
Grading at Mon Dec  7 07:03:47 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:30:22: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘void *’
     fc->decks[index] = malloc(sizeof(fc->decks[index]));
                      ^
future.c:32:34: error: expected ‘;’ before ‘:’ token
     fc->decks[index].cards = NULL:
                                  ^
Compilation of future.c failed

Overall Grade: F
